# m-series-pqc-timing-leak

./: .gitignore  Dockerfile  Makefile  README.md  REPRODUCE.md  WHITEPAPER.md  docker-compose.yml  header.tex
data/: dudect_comparison.json  experiment_pairwise_tvla.json  experiment_permutation_pi.json  experiment_tail_results.json  experiment_template_wasserstein_snr.json  experiment_vertical_scaling.json  final_report.json  final_report_v2.json  final_report_v3.json  intel_interleaved_results.json  intel_sequential_results.json  phase10_compiler_flags.json  phase11_interleaved_control.json  phase1_ksg_mi.json  phase2_regression.json  phase3_interactions.json  phase3_robust_snr_mi.json  phase4_distributional_tests.json  phase5_unsupervised.json  phase6_raw_trace_results.json  phase7_sensitivity_curve.json  phase8_ml_detection_floor.json  phase9_symmetric_control.json  phase9_symmetric_control_x86.json  phase_reviewer2_results.json  positive_control_results.json  raw_timing_traces.csv  raw_timing_traces_v3.csv  raw_timing_traces_vuln.csv  split_metadata.json  split_metadata_v2.json  split_metadata_v3.json  test.csv  test_v2.csv  test_v3.csv  test_v3_raw.csv  timer_profile_results.json  (+11 more)
sca-triage/: LICENSE  README.md  pyproject.toml
sca-triage/examples/: demo_apple_silicon.sh  demo_intel_x86.sh  positive_control.sh
sca-triage/sca_triage/: __init__.py  cli.py  demo.py  generate_sample_data.py  io.py  pairwise.py  permutation_mi.py  report.py  tvla.py  visualizations.py
sca-triage/tests/: test_pairwise.py  test_permutation_mi.py  test_report.py  test_tvla.py
(+75 files in other folders)
