[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sca-triage"
version = "1.0.0"
description = "TVLA False Positive Triage Tool — distinguishes real side-channel leakage from microarchitectural confounds"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Saahil Shenoy"}]
keywords = ["side-channel", "tvla", "post-quantum", "cryptography", "timing-attack", "fips"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
full = ["xgboost>=1.7"]

[project.scripts]
sca-triage = "sca_triage.cli:main"

[tool.setuptools.packages.find]
include = ["sca_triage*"]
